testdata/var/error-reassign.lox
{
    var a = 10;
    var a = 20;  // error: line 3 at 'a': already a variable with this name in scope
    var _ = a;
}
